<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" android:id="@+id/menu_group_huan">
        <item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_01"/>
        <item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_02"/>
        <item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_03"/>
        <item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_04"/>
        <item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_05"/>
        <item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_06"/>
        <item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_07"/>
        <item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_08"/>
        <item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_09"/>
        <item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_10"/>
        <item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_11"/>
    </group>

    <group android:checkableBehavior="single" android:id="@+id/menu_group_dui">
        <item android:icon="@mipmap/ic_event" android:title="@string/menu_dui_title_01"/>
        <item android:icon="@mipmap/ic_event" android:title="@string/menu_dui_title_02"/>
        <item android:icon="@mipmap/ic_event" android:title="@string/menu_dui_title_03"/>
    </group>

    <!--<item android:title="单位换算">-->
        <!--<menu>-->
            <!--<item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_01"/>-->
            <!--<item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_02"/>-->
            <!--<item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_03"/>-->
            <!--<item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_04"/>-->
            <!--<item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_05"/>-->
            <!--<item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_06"/>-->
            <!--<item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_07"/>-->
            <!--<item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_08"/>-->
            <!--<item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_09"/>-->
            <!--<item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_10"/>-->
            <!--<item android:icon="@mipmap/ic_forum" android:title="@string/menu_huan_title_11"/>-->
        <!--</menu>-->
    <!--</item>-->

    <!--<item android:title="常用兑换">-->
        <!--<menu>-->
            <!--<item android:icon="@mipmap/ic_event" android:title="@string/menu_dui_title_01"/>-->
            <!--<item android:icon="@mipmap/ic_event" android:title="@string/menu_dui_title_02"/>-->
            <!--<item android:icon="@mipmap/ic_event" android:title="@string/menu_dui_title_03"/>-->
        <!--</menu>-->
    <!--</item>-->


</menu>
